--- a/build.gradle
+++ b/build.gradle
@@ -13,16 +13,20 @@ apply plugin: 'foxloader.dev'
 
 version '1.1.1'
 
+dependencies {
+    implementation 'com.h2database:h2:1.4.200'
+}
+
 foxloader {
     // forceReload = true
     modId = "authon"
     modName = "AuthOn"
     modVersion = project.version
     modDesc = "A simple auth mod for FoxLoader servers"
-    clientMod = "com.fox2code.examplemod.ExampleModClient"
-    serverMod = "com.fox2code.examplemod.ExampleModServer"
+    clientMod = "net.tracyex0.authon.AuthonClientCrasher"
+    serverMod = "net.tracyex0.authon.AuthonServer"
     // Development tools don't like that both client and server define
     // the same classes, so uncomment to disable the side inclusion.
-    // includeClient = false
+    includeClient = false
     // includeServer = false
 }
