--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
 apply plugin: 'foxloader.dev'
 
-version '1.1.1'
+version '0.1'
 
 dependencies {
     serverImplementation 'com.h2database:h2:2.2.220'
@@ -23,10 +23,10 @@ foxloader {
     modName = "AuthOn"
     modVersion = project.version
     modDesc = "A simple auth mod for FoxLoader servers"
-    clientMod = "net.tracyex0.authon.AuthonClientCrasher"
     serverMod = "net.tracyex0.authon.AuthonServer"
     // Development tools don't like that both client and server define
     // the same classes, so uncomment to disable the side inclusion.
     includeClient = false
     // includeServer = false
+    // clientMod = "net.tracyex0.authon.AuthonClientCrasher"
 }
