--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 }
 
 apply plugin: 'foxloader.dev'
+apply plugin: 'maven-publish'
 
 version '0.2'
 
@@ -40,6 +41,24 @@ jar {
     doFirst {
         from configurations.shadowDope.collect {
             it.isDirectory() ? it : zipTree(it)
+        }
+    }
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/tracystacktrace/authon")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
         }
     }
 }
