--- a/.github/workflows/mod-publisher.yml
+++ b/.github/workflows/mod-publisher.yml
@@ -1,11 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
-
-name: Gradle Package
+name: Mod Publisher
 
 on:
   push:
@@ -39,5 +32,5 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: Package
-        path: build/libs
+        name: AuthOn-${{ github.ref_name }}
+        path: build/libs/AuthOn-${{ github.ref_name }}.jar
