--- a/.github/workflows/mod-publisher.yml
+++ b/.github/workflows/mod-publisher.yml
@@ -33,4 +33,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: AuthOn-${{ github.ref_name }}
-        path: build/libs/AuthOn-${{ github.ref_name }}.jar
+        path: ${{ github.workspace }}/build/libs/AuthOn-${{ github.ref_name }}.jar
+        if-no-files-found: error
