--- a/.github/workflows/mod-publisher.yml
+++ b/.github/workflows/mod-publisher.yml
@@ -22,16 +22,14 @@ jobs:
         distribution: 'temurin'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
-
+    
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-
+    
     - name: Build with Gradle
       run: ./gradlew build
-
-    - name: Upload mod (${{ github.ref_name }})
-      uses: actions/upload-artifact@v4
-      with:
-        path: build/libs/AuthOn-${{ github.ref_name }}.jar
-        if-no-files-found: error
-        compression-level: 0
+    
+    - name: Publish GitHub package
+      run: ./gradlew publish
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
