--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 }
 
 apply plugin: 'foxloader.dev'
+apply plugin: 'maven-publish'
 
 version '0.2'
 
@@ -42,4 +43,18 @@ jar {
             it.isDirectory() ? it : zipTree(it)
         }
     }
+}
+
+
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = "https://maven.pkg.github.com/tracystacktrace/authon"
+      credentials {
+        username = System.getenv("GITHUB_ACTOR")
+        password = System.getenv("GITHUB_TOKEN")
+      }
+    }
+  }
 }
